Final_PJT_finish

--- a/final_pjt/accounts/templates/accounts/profile.html
+++ b/final_pjt/accounts/templates/accounts/profile.html
@@ -6,33 +6,43 @@
 </div>
 <div class="d-flex justify-content-center">
   <img class="bg-warning mr-2 mt-1" src="https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" style="width: 250px; height: 250px; border-radius: 50%;" alt="" id="">
-  <div class="row text-white" style="margin-top: 15%;">
-    {% with followings=person.followings.all followers=person.followers.all %}
-    <div class="col-6 text-center" style="font-size: medium; font-weight: 600;" id="follow">
-      <p>following</p>
-      <p>{{ followings|length }}</p>
+  <div class=" text-white" style=" margin-left: 5%;">
+    <div>
+      <br>
     </div>
-    <div class="col-6 text-center" style="font-size: medium; font-weight: 600;" id="follow">
-      <p>follower</p>
-      <p>{{ followings|length }}</p>
+    {% with followings=person.followings.all followers=person.followers.all %}
+    
+    <div class="d-flex" style="font-size: medium; font-weight: 600;" id="follow">
+      <h4 style="margin-right: 20px;">following</h4>
+      <h4>{{ followings|length }}</h4>
+    </div>
+    <div>
+      <br>
+    </div>
+    <div class="d-flex" style="font-size: medium; font-weight: 600;" id="follow">
+      <h4 style="margin-right: 33px;">follower</h4>
+      <h4>{{ followers|length }}</h4>
     </div>
     {% endwith %}
+    <div>
+      <br>
+    </div>
+    <div class="text-white">
+      {% if user != person %}
+          {% if user in person.followers.all %}
+              <a class="text-white" href="{% url 'accounts:follow' person.username %}" ><button><h4>언팔로우</h4></button></a>
+          {% else %}
+              <a class="text-white" href="{% url 'accounts:follow' person.username %}"><button><h4>팔로우</h4></button></a>
+          {% endif %}
+      {% endif %}
+    </div>
   </div>
-  <img class="bg-warning ml-2 mt-1" src="https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" style="width: 250px; height: 250px; border-radius: 50%;" alt="" id="">
-
 </div>
 
-{% if user != person %}
-    {% if user in person.followers.all %}
-        <a href="{% url 'accounts:follow' person.username %}">언팔로우</a>
-    {% else %}
-        <a href="{% url 'accounts:follow' person.username %}">팔로우</a>
-    {% endif %}
-{% endif %}
-
 <br>
-
-<h3>{{ user.username }}님의 영화목록</h3>
+<br>
+<h3 class="text-center text-white">{{ person.username }}님의 영화목록</h3>
+<br>
 
 <div class="row d-flex justify-content-around"id="second">
   {% for movie in movies %}
@@ -41,15 +51,10 @@
 
     <div class="card-body text-center" style="height: 50%; width: 100%; font-size: large; font-weight: 600;">
       <a href="{% url 'movies:detail' movie.pk %}" class="card-title d-flex justify-content-center text-center text-dark" style="font-size: x-large; font-weight: 700;">{{ movie.original_title }}</a>
-      
-      <a href="{% url 'movies:detail' movie.pk %}" class="d-flex justify-content-center"><button>영화정보 더보기</button></a>
-      
-    
     </div>
-      
   </div>  
   {% endfor %}
 </div>
+
+
 {% endblock %}
-
-
