--- a/final_pjt/movies/templates/movies/movie_form.html
+++ b/final_pjt/movies/templates/movies/movie_form.html
@@ -3,28 +3,25 @@
 
 {% block content %}
 {% if request.resolver_match.url_name == 'movie_create' %}
-<h1>작성하기</h1>
+<h1 class="text-center">영화정보생성</h1>
 {% else %}
-<h1>수정하기</h1>
+<h1 class="text-center">영화정보수정</h1>
 {% endif %}
 
-{% if request.resolver_match.url_name == 'movie_create' %}
-<a href="{% url 'movies:index' %}"><뒤로가기</a>
-{% else %}
-<a href="{% url 'movies:detail' movie.pk %}"><뒤로가기</a>
-{% endif %}
 
-<form action="" method="POST">
+<form style="width: 720px;" class="mx-auto" action="" method="POST">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% if request.resolver_match.url_name == 'movie_create' %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary">작성하기</button>
-        {% endbuttons %}
+    <div class="d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">추가하기</button>
+        <a class="btn btn-danger" href="{% url 'movies:index' %}" role="button">뒤로가기</a>
+    </div> 
     {% else %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary">수정하기</button>
-        {% endbuttons %}
+    <div class="d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">수정하기</button>
+        <a class="btn btn-danger" href="{% url 'movies:detail' movie.pk %}" role="button">뒤로가기</a>
+    </div> 
     {% endif %}
 
 </form>
