--- a/final_pjt/movies/templates/movies/detail.html
+++ b/final_pjt/movies/templates/movies/detail.html
@@ -13,13 +13,14 @@
       <i class="fas fa-heart fa-lg like-button" style="color:crimson; margin-top: 4%; height: 5px; width: 5px; margin-right: 22px;" data-pk="{{ movie.pk }}"></i>
       {% else %}
       <i class="fas fa-heart fa-lg like-button" style="color:white; margin-top: 4%; height: 5px; width: 5px; margin-right: 22px;" data-pk="{{ movie.pk }}"></i>
+      <!-- <h1 id="like-count-{{ movie.pk }}">{{ movie.like_users.all|length }}명이 이 영화를 좋아합니다</h1>  -->
       {% endif %}
       <h1 id="like-count-{{ movie.pk }}">{{ movie.like_users.all|length }}명이 이 영화를 좋아합니다</h1> 
     </div>
     
   </div>
   
-  <div class="card text-center" id="detail_middle">
+  <div class="card text-center bg-secondary id="detail_middle">
     <div class="card-header bg-secondary text-white" >
       <span style="font-size: xx-large; font-weight: 700;">{{ movie.title }}</span>
       <span style="font-size: xx-large; font-weight: 700;"> ({{ movie.release_date }} 개봉)</span>
@@ -42,14 +43,14 @@
   <div id="detail_bottom">
     <div class="d-flex justify-content-front">
       <div>
-        <a href="{% url 'movies:create' movie.pk %}" class="btn btn-primary" style="border-color:darkblue;">리뷰작성 </a>
+        <a href="{% url 'movies:create' movie.pk %}" class="btn btn-primary" style="border-color:darkblue;">리뷰쓰기 </a>
       </div>
       {% if request.user.is_superuser %}
       <div class="d-flex ">
-        <a href="{% url 'movies:movie_update' movie.pk %}" class="btn btn-primary" style="border-color:darkblue;">수정하기</a>
+        <a href="{% url 'movies:movie_update' movie.pk %}" class="btn btn-primary" style="border-color:darkblue;">영화정보수정</a>
         <form action="{% url 'movies:movie_delete' movie.pk %}" method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-danger" style="border-color:darkblue;">삭제하기</button>
+            <button type="submit" class="btn btn-danger" style="border-color:darkblue;">영화삭제</button>
         </form>
       </div>
       {% endif %}
@@ -69,7 +70,7 @@
             <th scope="row" style="">{{ forloop.counter }}</th>
             <td><a href="{% url 'movies:review_detail' movie.pk review.pk %}" class="text-dark">{{ review.title }}</a></td>
             <td>{{ review.content }}</td>
-          <td><a href="{% url 'accounts:profile' review.user.username %}" class="text-white">{{ review.user.username }} 님의 프로필 방문하기</a></td>
+            <td><a href="{% url 'accounts:profile' review.user.username %}" class="text-white">{{ review.user.username }} 님의 프로필 방문하기</a></td>
           </tr>
           {% endfor %}
       </tbody>
