--- a/final_pjt/movies/templates/movies/index.html
+++ b/final_pjt/movies/templates/movies/index.html
@@ -23,8 +23,7 @@
     <p id="main">개봉일: {{ top_movies.release_date }}</p>
     <p class="text-bottom" id="main">{{ movie.like_users.all|length }} 명이 이 영화를 추천합니다!</p>
     <span>
-      <a href=""><button>상세정보</button></a>
-      <a href=""><button>찜하기</button></a>
+      <a href=""><button class="btn btn-primary">다음 영화</button></a>
     </span>
   </div>
 
@@ -39,7 +38,7 @@
     <div class="card-body text-center" style="height: 50%; width: 100%; font-size: large; font-weight: 600;">
       <a href="{% url 'movies:detail' movie.pk %}" class="card-title d-flex justify-content-center text-center text-dark" style="font-size: x-large; font-weight: 700;">{{ movie.original_title }}</a>
       
-      <a href="{% url 'movies:detail' movie.pk %}" class="d-flex justify-content-center"><button>영화정보 더보기</button></a>
+      <a href="{% url 'movies:detail' movie.pk %}" class="d-flex justify-content-center"><button class="btn btn-primary btn-sm">More</button></a>
       
     
       <ul class="list-group list-group-flush" >
