--- a/final_pjt/movies/templates/movies/recommand.html
+++ b/final_pjt/movies/templates/movies/recommand.html
@@ -1,46 +1,77 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-<a href="{% url 'movies:index' %}">뒤로가기</a>
-<br>
-<h2 class="text-info">{{ user.username }} 님을 위한 영화추천 BEST 10 !!</h2>
+<div id="review_detail_box">
+  <br>
+  <h2 class="text-white text-center">{{ user.username }} 님을 위한 영화추천  !!</h2>
+  <br>
+  <div class="d-flex justify-content-center">
+    <table class="table text-white" style="width: 50%; ">
+      <thead class="text-white" style="font-size: x-large;">
+        <th > {{ user.username }}</th>
+        <th>vote_average</th>
+        
+        <th>release_date</th>
+        
+        <th>popularity</th>
+        
+        <th>adult</th>
+        
+        <th> Genre
+        
+  
+        </th>
+  
+      </thead>
+      <tbody class="text-center text-white" style="font-size: x-large;">
+        <th> 취향 </th>
+        {% for recommand in recommands %}
+        <td> {{ recommand.vote_average }}</td>
+        <td>{{ recommand.release_date }}</td>
+        <td>{{ recommand.popularity }}</td>
+        <td>  {{ recommand.adult }}</td>
+        <td>
+          {% for genre in genre_recommands %}
+          <span style="font-size: x-large; font-weight: 900; ">{{ genre.genre_recommand }}</span>
+          {% endfor %}
+        </td>
+        {% endfor %}
+      </tbody>
+    </table>
 
-
-{% for recommand in recommands %}
-<h1>vote_average : {{ recommand.vote_average }}</h1>
-
-<h1>release_date : {{ recommand.release_date }}</h1>
-
-<h1>popularity : {{ recommand.popularity }}</h1>
-
-<h1>adult : {{ recommand.adult }}</h1>
-{% endfor %}
-
-{% for genre in genre_recommands %}
-{{ genre.genre_recommand }}
-{% endfor %}
-
-<table class="table table-striped text-center">
-  <thead>
-    <tr class="">
-      <th scope="col">Number</th>
-      <th scope="col">Title</th>
-      <th scope="col">Poster</th>
-      <th scope="col">Genre</th>
-    </tr>
-  </thead>
-    {% for choice in choices %}
-  <tbody>
-    <th scope="row">{{ forloop.counter }}</th>
-    <td>{{ choice.title }}</td>
-    <td><img src="https://image.tmdb.org/t/p/w780/{{ choice.poster_path }}" alt="poster" style="width:auto; height: 300px;"></td>
-    <td class="genres">
-      {% for genre in choice.genre_ids.all %}
-      <p class="badge badge-danger p-2">{{ genre.name }}</p><br>
-      {% endfor %}
-    </td>
-  </tbody>
+  </div>
+<!-- ########### -->
+  <div class="row d-flex justify-content-around"id="second">
+    {% for movie in choices %}
+    <div class="card col-3 ml-2 mr-2 mb-4 pr-1 pl-1 " style="" id="cards">
+      <img src="https://image.tmdb.org/t/p/w780/{{ movie.poster_path }}" class=" card-img-top " id="card_img">
+  
+      <div class="card-body text-center" style="height: 50%; width: 100%; font-size: large; font-weight: 600;">
+        <a href="{% url 'movies:detail' movie.pk %}" class="card-title d-flex justify-content-center text-center text-dark" style="font-size: x-large; font-weight: 700;">{{ movie.original_title }}</a>
+        
+        <a href="{% url 'movies:detail' movie.pk %}" class="d-flex justify-content-center"><button class="btn btn-primary btn-sm">More</button></a>
+        
+      
+        <ul class="list-group list-group-flush" >
+          <li class="list-group-item">개봉일: {{ movie.release_date }}</li>
+          <li class="list-group-item">인기도: {{ movie.popularity }}</li>
+          <li class="list-group-item">평점: {{ movie.vote_average }}</li>
+          <li class="list-group-item">장르: 
+            {% for genre in movie.genre_ids.all %}
+            <span>{{ genre.name }}</span>
+            {% endfor %}
+          </li>
+        </ul>
+      </div>
+        
+    </div>
+  
     {% endfor %}
-</table>
+  </div>
+
+
+<!-- ############### -->
+
+
 
 {% endblock %}
