--- a/final_pjt/movies/templates/movies/recommand_form.html
+++ b/final_pjt/movies/templates/movies/recommand_form.html
@@ -3,28 +3,19 @@
 
 {% block content %}
 {% if request.resolver_match.url_name == 'choice_create' %}
-<h1>당신의 선택</h1>
+<h1 class="text-center">당신의 선택</h1>
 {% else %}
-<h1>수정하기</h1>
+<h1 class="text-center">수정하기</h1>
 {% endif %}
 
 
-<a href="{% url 'movies:index' %}"><뒤로가기</a>
-
-
-<form action="" method="POST">
+<form style="width: 720px;" class="mx-auto" action="" method="POST">
     {% csrf_token %}
     {% bootstrap_form form %}
-    {% if request.resolver_match.url_name == 'choice_create' %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary">작성하기</button>
-        {% endbuttons %}
-    {% else %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary">수정하기</button>
-        {% endbuttons %}
-    {% endif %}
-
+    <div class="d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary">추천</button>
+        <a class="btn btn-danger" href="{% url 'movies:index' %}" role="button">뒤로가기</a>
+    </div> 
 </form>
 {% endblock %}
 
