--- a/final_pjt/templates/base.html
+++ b/final_pjt/templates/base.html
@@ -118,9 +118,16 @@
         border-bottom-right-radius: 40px;
       }
       #follow{
-        border: 1px solid;
-        border-width: 1px;
-        margin-bottom: -10;
+      }
+      #review_detail_box{
+        border: 3px solid;
+        border-color: black;
+        border-radius: 40px;
+        margin-top: 10px;
+        margin-left:auto;
+        margin-right: auto;
+        height: 100%;
+        width: 95%;
       }
     </style>
 
